# songsonar

./: .editorconfig  .env.example  .gitignore  Cargo.toml  Justfile  README.md  mix.exs
.github/workflows/: build-release-binaries.yml  ci.yml
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
lib/: exyarr.ex  exyarr_web.ex
lib/exyarr/: application.ex  oauth.ex  repo.ex  spotify.ex  user.ex
lib/exyarr_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/exyarr_web/channels/: user_socket.ex
lib/exyarr_web/controllers/: page_controller.ex
lib/exyarr_web/templates/layout/: app.html.eex
lib/exyarr_web/templates/page/: connected.html.eex  index.html.eex
lib/exyarr_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
migrations/: 20210924122852_init.sql
priv/repo/: seeds.exs  structure.sql
priv/repo/migrations/: 20210323184553_create_users.exs
src/: args.rs  basics.rs  catchers.rs  cookies.rs  csrf.rs  db.rs  errors.rs  main.rs  request_guards.rs  schedule.rs  sentry.rs  spotify.rs
src/routes/: auth.rs  dashboard.rs  index.rs  mod.rs  public.rs
src/schemas/: users.rs
src/spotify/: albums.rs  artists.rs  auth.rs  mod.rs  playlist.rs  util.rs
src/storage/: users.rs
static/: main.css
templates/: _base.html  dashboard.html  debug_dashboard.html  error.html  index.html  logged_in.html  main.css  privacy_policy.html
test/: test_helper.exs
test/exyarr/: oauth_test.exs
test/exyarr_web/controllers/: page_controller_test.exs
test/exyarr_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
test/support/: channel_case.ex  conn_case.ex  data_case.ex
