[package]
name = "songsonar"
version = "0.1.0"
edition = "2018"
publish = false
license = "GPL-3.0-or-later"

[profile.release]
lto = "thin"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = false

[dependencies]
rocket = { version = "0.5.0-rc.1", features = [ "tls" ] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "postgres", "macros", "chrono", "uuid", "migrate" ] }
tokio = { version = "1", features = ["rt", "process"] }
uuid = { version = "0.8", features = [ "serde", "v4" ] }
chrono = { version = "0.4", features = [ "serde" ] }
log = "0.4"
pretty_env_logger = "0.4"
thiserror = "1"
anyhow = "1"
aspotify = "0.7.0"
askama = { git = "https://github.com/djc/askama.git", branch = "main", features = ["with-rocket", "mime", "mime_guess"] }
askama_rocket = { git = "https://github.com/djc/askama.git", branch = "main" }
