[package]
name = "songsonar"
version = "0.1.0"
edition = "2018"
publish = false
license = "GPL-3.0-or-later"
resolver = "2"

[profile.release]
lto = "thin"
panic = 'abort'
opt-level = 'z'
# We want stacktraces in production
debug = true

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = false

[dependencies]
rocket = { version = "0.5.0-rc.1", features = [ "tls", "secrets" ] }
sqlx = { version = "0.5.7", features = [ "runtime-tokio-native-tls", "postgres", "macros", "migrate" ] }
tokio = { version = "1", features = ["rt", "time"] }
chrono = { version = "0.4", features = [ "serde" ] }
log = "0.4"
pretty_env_logger = "0.4"
thiserror = "1"
anyhow = "1"
aspotify = "0.7"
askama = { git = "https://github.com/djc/askama.git", branch = "main", features = ["with-rocket"], default-features = false }
askama_rocket = { git = "https://github.com/djc/askama.git", branch = "main" }
miniserde = "0.1"
sentry = { version = "0.23", features = ["log", "anyhow", "backtrace"] }
git-version = "0.3"
argh = "0.1"
rand = "0.8"
ring = "0.16"

[features]
